.antlr/rubyParser.java
// Generated from d:\school\github\scripts_util\ruby.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class rubyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, LITERAL=4, COMMA=5, ELLIPSIS=6, SEMICOLON=7, CRLF=8, 
		REQUIRE=9, BEGIN=10, END=11, DEF=12, RETURN=13, PIR=14, IF=15, ELSE=16, 
		ELSIF=17, UNLESS=18, WHILE=19, RETRY=20, BREAK=21, FOR=22, THEN=23, IN=24, 
		UNTIL=25, DO=26, TRUE=27, FALSE=28, PLUS=29, MINUS=30, MUL=31, DIV=32, 
		MOD=33, EXP=34, EQUAL=35, NOT_EQUAL=36, GREATER=37, LESS=38, LESS_EQUAL=39, 
		GREATER_EQUAL=40, ASSIGN=41, PLUS_ASSIGN=42, MINUS_ASSIGN=43, MUL_ASSIGN=44, 
		DIV_ASSIGN=45, MOD_ASSIGN=46, EXP_ASSIGN=47, BIT_AND=48, BIT_OR=49, BIT_XOR=50, 
		BIT_NOT=51, BIT_SHL=52, BIT_SHR=53, AND=54, OR=55, NOT=56, HASH_OP=57, 
		LEFT_RBRACKET=58, RIGHT_RBRACKET=59, LEFT_SBRACKET=60, RIGHT_SBRACKET=61, 
		LEFT_BBRACKET=62, REFT_BBRACKET=63, NIL=64, SL_COMMENT=65, ML_COMMENT=66, 
		WS=67, INT=68, FLOAT=69, ID=70, CONST_ID=71, ID_GLOBAL=72, ID_INSTANCE=73, 
		ID_FUNCTION=74;
	public static final int
		RULE_prog = 0, RULE_expression_list = 1, RULE_expression = 2, RULE_global_get = 3, 
		RULE_global_set = 4, RULE_global_result = 5, RULE_instance_set = 6, RULE_instance_result = 7, 
		RULE_const_set = 8, RULE_function_inline_call = 9, RULE_require_block = 10, 
		RULE_pir_inline = 11, RULE_pir_expression_list = 12, RULE_class_definition = 13, 
		RULE_module_definition = 14, RULE_function_definition = 15, RULE_function_definition_body = 16, 
		RULE_function_definition_header = 17, RULE_function_name = 18, RULE_function_definition_params = 19, 
		RULE_function_definition_params_list = 20, RULE_function_definition_param_id = 21, 
		RULE_return_statement = 22, RULE_function_call = 23, RULE_function_call_param_list = 24, 
		RULE_function_call_params = 25, RULE_function_param = 26, RULE_function_unnamed_param = 27, 
		RULE_function_named_param = 28, RULE_function_call_assignment = 29, RULE_all_result = 30, 
		RULE_elsif_statement = 31, RULE_if_elsif_statement = 32, RULE_if_statement = 33, 
		RULE_unless_statement = 34, RULE_while_statement = 35, RULE_all_assignment = 36, 
		RULE_for_statement = 37, RULE_for_each_statement = 38, RULE_cond_expression = 39, 
		RULE_loop_expression = 40, RULE_hash_expression = 41, RULE_statement_body = 42, 
		RULE_statement_expression_list = 43, RULE_assignment = 44, RULE_dynamic_assignment = 45, 
		RULE_int_assignment = 46, RULE_float_assignment = 47, RULE_string_assignment = 48, 
		RULE_initial_array_assignment = 49, RULE_array_assignment = 50, RULE_array_definition = 51, 
		RULE_array_definition_elements = 52, RULE_array_selector = 53, RULE_dynamic_result = 54, 
		RULE_dynamic_ = 55, RULE_int_result = 56, RULE_float_result = 57, RULE_string_result = 58, 
		RULE_comparison_list = 59, RULE_comparison = 60, RULE_comp_var = 61, RULE_lvalue = 62, 
		RULE_rvalue = 63, RULE_break_expression = 64, RULE_literal_t = 65, RULE_float_t = 66, 
		RULE_int_t = 67, RULE_bool_t = 68, RULE_nil_t = 69, RULE_id_ = 70, RULE_id_global = 71, 
		RULE_id_instance = 72, RULE_id_constence = 73, RULE_id_function = 74, 
		RULE_terminator = 75, RULE_else_token = 76, RULE_crlf = 77;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "expression_list", "expression", "global_get", "global_set", 
			"global_result", "instance_set", "instance_result", "const_set", "function_inline_call", 
			"require_block", "pir_inline", "pir_expression_list", "class_definition", 
			"module_definition", "function_definition", "function_definition_body", 
			"function_definition_header", "function_name", "function_definition_params", 
			"function_definition_params_list", "function_definition_param_id", "return_statement", 
			"function_call", "function_call_param_list", "function_call_params", 
			"function_param", "function_unnamed_param", "function_named_param", "function_call_assignment", 
			"all_result", "elsif_statement", "if_elsif_statement", "if_statement", 
			"unless_statement", "while_statement", "all_assignment", "for_statement", 
			"for_each_statement", "cond_expression", "loop_expression", "hash_expression", 
			"statement_body", "statement_expression_list", "assignment", "dynamic_assignment", 
			"int_assignment", "float_assignment", "string_assignment", "initial_array_assignment", 
			"array_assignment", "array_definition", "array_definition_elements", 
			"array_selector", "dynamic_result", "dynamic_", "int_result", "float_result", 
			"string_result", "comparison_list", "comparison", "comp_var", "lvalue", 
			"rvalue", "break_expression", "literal_t", "float_t", "int_t", "bool_t", 
			"nil_t", "id_", "id_global", "id_instance", "id_constence", "id_function", 
			"terminator", "else_token", "crlf"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'module'", "'.'", null, "','", "'..'", "';'", null, 
			"'require'", "'begin'", "'end'", "'def'", "'return'", "'pir'", "'if'", 
			"'else'", "'elsif'", "'unless'", "'while'", "'retry'", "'break'", "'for'", 
			"'then'", "'in'", "'until'", "'do'", "'true'", "'false'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", "'&'", "'|'", 
			"'^'", "'~'", "'<<'", "'>>'", null, null, null, "'=>'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "LITERAL", "COMMA", "ELLIPSIS", "SEMICOLON", 
			"CRLF", "REQUIRE", "BEGIN", "END", "DEF", "RETURN", "PIR", "IF", "ELSE", 
			"ELSIF", "UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "THEN", "IN", "UNTIL", 
			"DO", "TRUE", "FALSE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EXP", "EQUAL", 
			"NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", "GREATER_EQUAL", "ASSIGN", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
			"EXP_ASSIGN", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "BIT_SHL", "BIT_SHR", 
			"AND", "OR", "NOT", "HASH_OP", "LEFT_RBRACKET", "RIGHT_RBRACKET", "LEFT_SBRACKET", 
			"RIGHT_SBRACKET", "LEFT_BBRACKET", "REFT_BBRACKET", "NIL", "SL_COMMENT", 
			"ML_COMMENT", "WS", "INT", "FLOAT", "ID", "CONST_ID", "ID_GLOBAL", "ID_INSTANCE", 
			"ID_FUNCTION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ruby.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public rubyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public TerminalNode EOF() { return getToken(rubyParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			expression_list(0);
			setState(157);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_listContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_list; }
	}

	public final Expression_listContext expression_list() throws RecognitionException {
		return expression_list(0);
	}

	private Expression_listContext expression_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_listContext _localctx = new Expression_listContext(_ctx, _parentState);
		Expression_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(160);
				expression();
				setState(161);
				terminator(0);
				}
				break;
			case 2:
				{
				setState(163);
				terminator(0);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Expression_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression_list);
					setState(166);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(167);
					expression();
					setState(168);
					terminator(0);
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_inline_callContext function_inline_call() {
			return getRuleContext(Function_inline_callContext.class,0);
		}
		public Require_blockContext require_block() {
			return getRuleContext(Require_blockContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Unless_statementContext unless_statement() {
			return getRuleContext(Unless_statementContext.class,0);
		}
		public RvalueContext rvalue() {
			return getRuleContext(RvalueContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Pir_inlineContext pir_inline() {
			return getRuleContext(Pir_inlineContext.class,0);
		}
		public Hash_expressionContext hash_expression() {
			return getRuleContext(Hash_expressionContext.class,0);
		}
		public Class_definitionContext class_definition() {
			return getRuleContext(Class_definitionContext.class,0);
		}
		public Module_definitionContext module_definition() {
			return getRuleContext(Module_definitionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				for_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				function_definition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(177);
				function_inline_call();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(178);
				require_block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(179);
				if_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(180);
				unless_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(181);
				rvalue(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(182);
				return_statement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(183);
				while_statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(185);
				pir_inline();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(186);
				hash_expression();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(187);
				class_definition();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(188);
				module_definition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_getContext extends ParserRuleContext {
		public LvalueContext var_name;
		public Token op;
		public Id_globalContext global_name;
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(rubyParser.ASSIGN, 0); }
		public Id_globalContext id_global() {
			return getRuleContext(Id_globalContext.class,0);
		}
		public Global_getContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_get; }
	}

	public final Global_getContext global_get() throws RecognitionException {
		Global_getContext _localctx = new Global_getContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_global_get);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			((Global_getContext)_localctx).var_name = lvalue();
			setState(192);
			((Global_getContext)_localctx).op = match(ASSIGN);
			setState(193);
			((Global_getContext)_localctx).global_name = id_global();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_setContext extends ParserRuleContext {
		public Id_globalContext global_name;
		public Token op;
		public All_resultContext result;
		public Id_globalContext id_global() {
			return getRuleContext(Id_globalContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(rubyParser.ASSIGN, 0); }
		public All_resultContext all_result() {
			return getRuleContext(All_resultContext.class,0);
		}
		public Global_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_set; }
	}

	public final Global_setContext global_set() throws RecognitionException {
		Global_setContext _localctx = new Global_setContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_global_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			((Global_setContext)_localctx).global_name = id_global();
			setState(196);
			((Global_setContext)_localctx).op = match(ASSIGN);
			setState(197);
			((Global_setContext)_localctx).result = all_result();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_resultContext extends ParserRuleContext {
		public Id_globalContext id_global() {
			return getRuleContext(Id_globalContext.class,0);
		}
		public Global_resultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_result; }
	}
